@@ -27,6 +27,14 @@
     </div>
   </div>
   
+<?php
+  if ($error_msg != '') {
+    echo '  <div id="error_bar">'."\n";
+    echo '    <span id="error_msg">'.$error_msg."</span>\n";
+    echo "  </div>\n";
+  }
+?>
+  
   <div id="content">
     
     <span class="about_title">About</span>
