@@ -25,7 +25,13 @@
       </table>
     </div>
   </div>
-  
+<?php
+  if ($error_msg != '') {
+    echo '  <div id="error_bar">'."\n";
+    echo '    <span id="error_msg">'.$error_msg."</span>\n";
+    echo "  </div>\n";
+  }
+?>  
   <div id="content">
     <form id="lookup_field_form" action="metal_result.php" method="post">
       <div id="tool_title">
