@@ -174,6 +174,22 @@ html, body {
 	background-color: #d27c00;
 }
 
+#error_bar {
+	position:relative;
+	background-color: orange;
+	height: 30px;
+	border:1px solid black;
+}
+
+#error_msg {
+	display:block;
+	text-align: center;
+	font-family: TFBuild, Verdana;
+	padding-top: 5px;
+	text-shadow: #d27c00 0.1em 0.1em 0.2em;
+	
+}
+
 #content {
 	min-width: 850px;
 	min-height: 400px;
